--- a/schedule-app/src/styles.css
+++ b/schedule-app/src/styles.css
@@ -42,10 +42,6 @@ a:not([href]):not([tabindex]):focus {
   outline: 1;
 }
 
-.mat-toolbar.mat-primary {
-  margin-bottom: 15px;
-}
-
 input[type="text"]:not(textaarea) {
   box-shadow: none;
   -webkit-box-shadow: none;
@@ -69,4 +65,8 @@ mat-sidenav-container {
   margin: 0;
   width: 100%;
   height: 100%;
+}
+
+button:focus {
+  outline: none;
 }
